tests/diagnostic_golden_cc/free_parse_continuation.diag
error[CF2004]: missing required identifier
  --> tests/diagnostic_golden_cc/free_parse_continuation.f90:3:3
   = stage: parser
   = help: see docs/errors.md#CF2004
  |
3 |   )
  |   ^ identifier required here
  ::: tests/diagnostic_golden_cc\free_parse_continuation.f90:2:1
  |
2 | integer :: a, &
  | ~~~~~~~~~~~~~ continuation started here
